fix: change hungry conrgy position on mobiles

--- a/rs-css/src/main/global-styles/layout/_playground.scss
+++ b/rs-css/src/main/global-styles/layout/_playground.scss
@@ -160,7 +160,7 @@ $bg-full-height: 1080;
     }
 
     & > .corgy[mood = "hungry"] {
-      top: -40%;
+      top: 0;
     }
 
     & > .corgy {
@@ -182,7 +182,7 @@ $bg-full-height: 1080;
     }
 
     & > .corgy[mood = "hungry"] {
-      top: -40%;
+      top: 0;
     }
 
     & > .corgy {
